--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Card Section-->
     <div class="container">
       <div class="card-collection-text">
-        <h2>Favourite Strains Today.</h2>
+        <h2 class="header2">Favourite Strains Today.</h2>
         <p>Discover finest cannabis strains.</p>
       </div>
       <!-- Card 1-->
@@ -118,8 +118,20 @@
     <!-- Learn Section-->
     <div class="learn-section">
       <div class="container">
-        <h2>Educate Yourself.</h2>
-        <p>Understanding its properties, potential benefits, and responsible use can contribute to a safe and informed cannabis experience</p>
+        <div class="learn-section-text">
+          <h2 class="header2">Educate Yourself.</h2>
+          <p>Understanding its properties, potential benefits, and responsible use can contribute to a safe and informed cannabis experience</p>
+        </div>
+        <!-- Article Card 1-->
+        <article class="article-container">
+          <div class="article-img-container">
+            <img src="./images/article_1.jpg" alt="Cannabis Plants" class="article-image" />
+          </div>
+          <div class="article-content">
+            <h3>How to grow weed at home</h3>
+            <a class="btn-secondary" href="#strains">learn more</a>
+          </div>
+        </article>
       </div>
     </div>
   </body>
