--- a/index.html
+++ b/index.html
@@ -123,16 +123,55 @@
           <p>Understanding its properties, potential benefits, and responsible use can contribute to a safe and informed cannabis experience</p>
         </div>
         <!-- Article Card 1-->
-        <article class="article-container">
-          <div class="article-img-container">
-            <img src="./images/article_1.jpg" alt="Cannabis Plants" class="article-image" />
-          </div>
-          <div class="article-content">
-            <h3>How to grow weed at home</h3>
-            <a class="btn-secondary" href="#strains">learn more</a>
-          </div>
-        </article>
+        <div class="article-grid">
+          <article class="article-container">
+            <div class="article-img-container">
+              <img src="./images/article_1.jpg" alt="Cannabis Plants" class="article-image" />
+            </div>
+            <div class="article-content">
+              <h3>How to grow weed at home</h3>
+              <a class="btn-secondary" href="#strains">learn more</a>
+            </div>
+          </article>
+          <!-- Article Card 2-->
+          <article class="article-container-alt">
+            <div class="article-img-container-alt">
+              <img src="./images/article_2.jpg" alt="Cannabis Plants" class="article-image-alt" />
+            </div>
+            <div class="article-content-alt">
+              <div class="strain-type">
+                <span class="strain-type-text">Lifestyle</span>
+              </div>
+              <h3>History of Cannabis use</h3>
+              <p>
+                Cannabis, with a rich history spanning millennia, has been cultivated and used by diverse cultures for medicinal, recreational, and
+                spiritual purposes.
+              </p>
+              <a class="btn-article" href="#strains">learn more</a>
+            </div>
+          </article>
+          <!-- Article Card 3-->
+          <article class="article-container-alt">
+            <div class="article-img-container-alt">
+              <img src="./images/article_3.jpg" alt="Cannabis Plants" class="article-image-alt" />
+            </div>
+            <div class="article-content-alt">
+              <div class="strain-type">
+                <span class="strain-type-text">Grow</span>
+              </div>
+              <h3>Properly Curing and Storing</h3>
+              <p>
+                Ensuring optimal flavor and potency, properly curing and storing cannabis involves a delicate balance of humidity and temperature.
+              </p>
+              <a class="btn-article" href="#strains">learn more</a>
+            </div>
+          </article>
+        </div>
       </div>
+    </div>
+
+    <div class="newsletter">
+      <h2>SIgnup</h2>
     </div>
   </body>
 </html>
