--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <form class="dealer-form">
           <input type="email" name="email" placeholder="email@adress.com" required autocomplete="off" />
           <input type="submit" value="register" class="btn-secondary" />
-          <p>By providing us with your email adress, you agree to BudBuddie’s <a href="">Terms of Service</a> and <a href="">Privacy Policy.</a></p>
+          <p>By providing us with your email adress, you agree to BudBuddie’s <a href="#">Terms of Service</a> and <a href="#">Privacy Policy.</a></p>
         </form>
       </div>
     </div>
@@ -167,11 +167,20 @@
             </div>
           </article>
         </div>
+        <a class="btn-noborder" href="#strains">View All Products</a>
       </div>
     </div>
 
     <div class="newsletter">
-      <h2>SIgnup</h2>
+      <div class="container">
+        <h2 class="header2">Stay in the loop!</h2>
+        <p class="subheader">Get the latest news on strains and exclusive offers. Your cannabis journey is about to get exciting</p>
+        <form class="dealer-form">
+          <input type="email" name="email" placeholder="email@adress.com" required autocomplete="off" />
+          <input type="submit" value="register" class="btn-secondary" />
+          <p>By providing us with your email adress, you agree to BudBuddie’s <a href="#">Terms of Service</a> and <a href="#">Privacy Policy.</a></p>
+        </form>
+      </div>
     </div>
   </body>
 </html>
