--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <a class="btn-noborder" href="#strains">View All Products</a>
       </div>
     </div>
-
+    <!-- Newsletter-->
     <div class="newsletter">
       <div class="container">
         <h2 class="header2">Stay in the loop!</h2>
@@ -181,6 +181,65 @@
           <p>By providing us with your email adress, you agree to BudBuddie’s <a href="#">Terms of Service</a> and <a href="#">Privacy Policy.</a></p>
         </form>
       </div>
+    </div>
+    <!-- Footer-->
+    <footer>
+      <div class="container">
+        <div class="footer-upper">
+          <div class="logo">
+            <img src="./images/logo.svg" alt="BudBuddie Logo" />
+          </div>
+          <div class="footer-nav">
+            <h4>Navigation</h4>
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#Strains">Strains</a></li>
+              <li><a href="#Learn">Learn</a></li>
+            </ul>
+          </div>
+          <div class="footer-legal">
+            <h4>Legal</h4>
+            <ul>
+              <li><a href="#home">Privacy Policy</a></li>
+              <li><a href="#about">Accesibility</a></li>
+              <li><a href="#Strains">Terms & Conditions</a></li>
+            </ul>
+          </div>
+          <div class="footer-socials">
+            <h4>Contact</h4>
+            <ul id="contact">
+              <li>
+                <p>
+                  <i class="fa-solid fa-envelope" style="color: #fff"></i>
+                  <a href="mailto:info@budbuddie.com">info@budbuddie.com</a>
+                </p>
+              </li>
+              <li>
+                <p>
+                  <i class="fa-solid fa-phone" style="color: #fff"></i>
+                  <a href="tel:+00386 31 696 679">031 696 679</a>
+                </p>
+              </li>
+            </ul>
+            <ul id="socials">
+              <li>
+                <a href="https://www.facebook.com/p/BudBuddie/">
+                  <i class="fa-brands fa-facebook fa-2xl" style="color: #fff"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/budbuddie/">
+                  <i class="fa-brands fa-instagram fa-2xl" style="color: #fff"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="footer-lower">
+      <p>© 2024 BudBuddie. All rights reserved. By Miha Pehlič, made with <i class="fa-solid fa-heart"></i></p>
     </div>
   </body>
 </html>
