--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
         <div class="navbar">
           <a href="#home"><img src="images/logo.svg" alt="BudBuddie Logo" class="logo" /></a>
           <nav>
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#aboutus">About Us</a></li>
-              <li><a href="#strains">Strains</a></li>
-              <li><a href="#learn">Learn</a></li>
+            <ul class="nav-menu">
+              <li><a href="#home" class="nav-link">Home</a></li>
+              <li><a href="#aboutus" class="nav-link">About Us</a></li>
+              <li><a href="#strains" class="nav-link">Strains</a></li>
+              <li><a href="#learn" class="nav-link">Learn</a></li>
             </ul>
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </div>
           </nav>
         </div>
       </div>
@@ -241,5 +246,21 @@
     <div class="footer-lower">
       <p>© 2024 BudBuddie. All rights reserved. By Miha Pehlič, made with <i class="fa-solid fa-heart"></i></p>
     </div>
+    <script>
+      const hamburger = document.querySelector('.hamburger');
+      const navMenu = document.querySelector('.nav-menu');
+
+      hamburger.addEventListener('click', () => {
+        hamburger.classList.toggle('active');
+        navMenu.classList.toggle('active');
+      });
+
+      document.querySelectorAll('.nav-link').forEach((n) =>
+        n.addEventListener('click', () => {
+          hamburger.classList.remove('active');
+          navMenu.classList.remove('active');
+        })
+      );
+    </script>
   </body>
 </html>
