--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#ef7829" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#ef7829" />
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#ef7829" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
