--- a/strains.html
+++ b/strains.html
@@ -24,7 +24,7 @@
           <a href="index.html"><img src="images/logo.svg" alt="BudBuddie Logo" class="logo" /></a>
           <nav>
             <ul class="nav-menu">
-              <li><a href="index.html" class="nav-link active">Home</a></li>
+              <li><a href="index.html" class="nav-link">Home</a></li>
               <li><a href="about.html" class="nav-link">About Us</a></li>
               <li><a href="strains.html" class="nav-link">Strains</a></li>
               <li><a href="learn.html" class="nav-link">Learn</a></li>
@@ -38,7 +38,7 @@
         </div>
       </div>
       <!-- Hero Text-->
-      <div class="hero-content">
+      <div class="hero-content-strains">
         <h1>Explore the <br />World of Cannabis</h1>
         <p>
           Discover our diverse universe of strains, connect with local dealers and elevate your cannabis exploration experience. BudBuddie is your
@@ -50,13 +50,6 @@
         </div>
       </div>
     </header>
-    <!-- SubHero Text-->
-    <div class="text-content">
-      <h2>
-        Immerse yourself in a selection of cannabis strains,<br />
-        each one a tale waiting for you to unfold it.
-      </h2>
-    </div>
     <!-- Card Section-->
     <div class="container">
       <div class="card-collection-text">
@@ -64,7 +57,7 @@
         <p>Discover finest cannabis strains.</p>
       </div>
       <!-- Card 1-->
-      <div class="card-collection">
+      <div class="card-collection-grid">
         <div class="product-card">
           <div class="image-half">
             <img src="images/grape_pie.png" alt="Grape Pie Strain" />
@@ -109,93 +102,97 @@
             <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/grape_pie.png" alt="Grape Pie Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Indica</span>
+            </div>
+            <h3>Grape Pie</h3>
+            <p>THC 22% CBD 0%</p>
+            <p>Uplifting, Euphoric, Relaxed</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
+        <!-- Card 2-->
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/lemon_haze.png" alt="Grape Pie Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Sativa</span>
+            </div>
+            <h3>Lemon Haze</h3>
+            <p>THC 20% CBD 0%</p>
+            <p>Energetic, Trippy, Happy</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
+        <!-- Card 3-->
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Indica/Sativa</span>
+            </div>
+            <h3>Kush Bomb</h3>
+            <p>THC 25% CBD 0%</p>
+            <p>Strong, Cerebral, Uplifting</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Indica/Sativa</span>
+            </div>
+            <h3>Kush Bomb</h3>
+            <p>THC 25% CBD 0%</p>
+            <p>Strong, Cerebral, Uplifting</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Indica/Sativa</span>
+            </div>
+            <h3>Kush Bomb</h3>
+            <p>THC 25% CBD 0%</p>
+            <p>Strong, Cerebral, Uplifting</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Indica/Sativa</span>
+            </div>
+            <h3>Kush Bomb</h3>
+            <p>THC 25% CBD 0%</p>
+            <p>Strong, Cerebral, Uplifting</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
       </div>
+
       <a class="btn-noborder" href="strains.html">View All Products</a>
     </div>
-    <!-- Dealer Newsletter-->
-    <div class="dealer-newsletter">
-      <div class="container">
-        <h2>Looking for a weed dealer in your area? <span>We got you!</span></h2>
-        <form class="dealer-form">
-          <input type="email" name="email" placeholder="email@adress.com" required autocomplete="off" />
-          <input type="submit" value="register" class="btn-secondary" />
-          <p>
-            By providing us with your email adress, you agree to BudBuddie’s <a href="404.html">Terms of Service</a> and
-            <a href="404.html">Privacy Policy.</a>
-          </p>
-        </form>
-      </div>
-    </div>
-    <!-- Learn Section-->
-    <div class="learn-section">
-      <div class="container">
-        <div class="learn-section-text">
-          <h2 class="header2">Educate Yourself.</h2>
-          <p>Understanding its properties, potential benefits, and responsible use can contribute to a safe and informed cannabis experience</p>
-        </div>
-        <!-- Article Card 1-->
-        <div class="article-grid">
-          <article class="article-container">
-            <div class="article-img-container">
-              <img src="./images/article_1.jpg" alt="Cannabis Plants" class="article-image" />
-            </div>
-            <div class="article-content">
-              <h3>How to grow weed at home</h3>
-              <a class="btn-secondary" href="learn.html">learn more</a>
-            </div>
-          </article>
-          <!-- Article Card 2-->
-          <article class="article-container-alt">
-            <div class="article-img-container-alt">
-              <img src="./images/article_2.jpg" alt="Cannabis Plants" class="article-image-alt" />
-            </div>
-            <div class="article-content-alt">
-              <div class="strain-type">
-                <span class="strain-type-text">Lifestyle</span>
-              </div>
-              <h3>History of Cannabis use</h3>
-              <p>
-                Cannabis, with a rich history spanning millennia, has been cultivated and used by diverse cultures for medicinal, recreational, and
-                spiritual purposes.
-              </p>
-              <a class="btn-article" href="learn.html">learn more</a>
-            </div>
-          </article>
-          <!-- Article Card 3-->
-          <article class="article-container-alt">
-            <div class="article-img-container-alt">
-              <img src="./images/article_3.jpg" alt="Cannabis Plants" class="article-image-alt" />
-            </div>
-            <div class="article-content-alt">
-              <div class="strain-type">
-                <span class="strain-type-text">Grow</span>
-              </div>
-              <h3>Properly Curing and Storing</h3>
-              <p>
-                Ensuring optimal flavor and potency, properly curing and storing cannabis involves a delicate balance of humidity and temperature.
-              </p>
-              <a class="btn-article" href="learn.html">learn more</a>
-            </div>
-          </article>
-        </div>
-        <a class="btn-noborder" href="learn.html">View All Articles</a>
-      </div>
-    </div>
-    <!-- Newsletter-->
-    <div class="newsletter">
-      <div class="container">
-        <h2 class="header2">Stay in the loop!</h2>
-        <p class="subheader">Get the latest news on strains and exclusive offers. Your cannabis journey is about to get exciting</p>
-        <form class="dealer-form">
-          <input type="email" name="email" placeholder="email@adress.com" required autocomplete="off" />
-          <input type="submit" value="register" class="btn-secondary" />
-          <p>
-            By providing us with your email adress, you agree to BudBuddie’s <a href="404.html">Terms of Service</a> and
-            <a href="404.html">Privacy Policy.</a>
-          </p>
-        </form>
-      </div>
-    </div>
+
     <!-- Footer-->
     <footer>
       <div class="container">
@@ -273,3 +270,5 @@
     </script>
   </body>
 </html>
+
+{% for transaction in transactions %} {% if transaction.gateway == "Bank Deposit" %} {% endif %} {% endfor%}
