--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
       <div class="container">
         <div class="footer-upper">
           <div class="logo">
-            <img src="./images/logo.svg" alt="BudBuddie Logo" />
+            <a href="index.html"><img src="./images/logo.svg" alt="BudBuddie Logo" /></a>
           </div>
           <div class="footer-nav">
             <h4>Navigation</h4>
