--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Card 2-->
         <div class="product-card">
           <div class="image-half">
-            <img src="images/lemon_haze.png" alt="Grape Pie Strain" />
+            <img src="images/lemon_haze.png" alt="Lemon Haze Strain" />
           </div>
           <div class="text-half">
             <div class="strain-type">
@@ -97,7 +97,7 @@
         <!-- Card 3-->
         <div class="product-card">
           <div class="image-half">
-            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
+            <img src="images/kush_bomb.png" alt="Kush Bomb Strain" />
           </div>
           <div class="text-half">
             <div class="strain-type">
@@ -201,7 +201,7 @@
       <div class="container">
         <div class="footer-upper">
           <div class="logo">
-            <img src="./images/logo.svg" alt="BudBuddie Logo" />
+            <a href="index.html"><img src="./images/logo.svg" alt="BudBuddie Logo" /></a>
           </div>
           <div class="footer-nav">
             <h4>Navigation</h4>
