--- a/strains.html
+++ b/strains.html
@@ -26,7 +26,7 @@
             <ul class="nav-menu">
               <li><a href="index.html" class="nav-link">Home</a></li>
               <li><a href="about.html" class="nav-link">About Us</a></li>
-              <li><a href="strains.html" class="nav-link">Strains</a></li>
+              <li><a href="strains.html" class="nav-link active">Strains</a></li>
               <li><a href="learn.html" class="nav-link">Learn</a></li>
             </ul>
             <div class="hamburger">
@@ -75,7 +75,7 @@
         <!-- Card 2-->
         <div class="product-card">
           <div class="image-half">
-            <img src="images/lemon_haze.png" alt="Grape Pie Strain" />
+            <img src="images/lemon_haze.png" alt="Lemon Haze Strain" />
           </div>
           <div class="text-half">
             <div class="strain-type">
@@ -90,11 +90,11 @@
         <!-- Card 3-->
         <div class="product-card">
           <div class="image-half">
-            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
+            <img src="images/kush_bomb.png" alt="Kush Bomb Strain" />
           </div>
           <div class="text-half">
             <div class="strain-type">
-              <span class="strain-type-text">Indica/Sativa</span>
+              <span class="strain-type-text">Hybrid</span>
             </div>
             <h3>Kush Bomb</h3>
             <p>THC 25% CBD 0%</p>
@@ -102,36 +102,67 @@
             <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
+        <!-- Card 4-->
         <div class="product-card">
           <div class="image-half">
-            <img src="images/grape_pie.png" alt="Grape Pie Strain" />
+            <img src="images/ak_47.png" alt="AK-47 Strain" />
           </div>
           <div class="text-half">
             <div class="strain-type">
-              <span class="strain-type-text">Indica</span>
+              <span class="strain-type-text">Hybrid</span>
             </div>
-            <h3>Grape Pie</h3>
-            <p>THC 22% CBD 0%</p>
-            <p>Uplifting, Euphoric, Relaxed</p>
+            <h3>AK-47</h3>
+            <p>THC 19% CBD 0%</p>
+            <p>Talkative, Hungry, Energetic</p>
             <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
-        <!-- Card 2-->
+        <!-- Card 5-->
         <div class="product-card">
           <div class="image-half">
-            <img src="images/lemon_haze.png" alt="Grape Pie Strain" />
+            <img src="images/sour_diesel.png" alt="Sour Diesel Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Hybrid</span>
+            </div>
+            <h3>Sour Diesel</h3>
+            <p>THC 19% CBD 0%</p>
+            <p>Creative, Energetic, Uplifting</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
+        <!-- Card 6-->
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/super_silver_haze.png" alt="Super Silver Haze Strain" />
           </div>
           <div class="text-half">
             <div class="strain-type">
               <span class="strain-type-text">Sativa</span>
             </div>
-            <h3>Lemon Haze</h3>
-            <p>THC 20% CBD 0%</p>
-            <p>Energetic, Trippy, Happy</p>
+            <h3>Super Silver Haze</h3>
+            <p>THC 21% CBD 1%</p>
+            <p>Energetic, Uplifting, Creative</p>
             <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
-        <!-- Card 3-->
+        <!-- Card 7-->
+        <div class="product-card">
+          <div class="image-half">
+            <img src="images/white_widow.png" alt="White Widow Strain" />
+          </div>
+          <div class="text-half">
+            <div class="strain-type">
+              <span class="strain-type-text">Hybrid</span>
+            </div>
+            <h3>White Widow</h3>
+            <p>THC 15% CBD 0%</p>
+            <p>Energetic, Talkative, Creative</p>
+            <a class="btn-terciary" href="strains.html">Explore</a>
+          </div>
+        </div>
+        <!-- Card 8-->
         <div class="product-card">
           <div class="image-half">
             <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
@@ -146,34 +177,7 @@
             <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Indica/Sativa</span>
-            </div>
-            <h3>Kush Bomb</h3>
-            <p>THC 25% CBD 0%</p>
-            <p>Strong, Cerebral, Uplifting</p>
-            <a class="btn-terciary" href="strains.html">Explore</a>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Indica/Sativa</span>
-            </div>
-            <h3>Kush Bomb</h3>
-            <p>THC 25% CBD 0%</p>
-            <p>Strong, Cerebral, Uplifting</p>
-            <a class="btn-terciary" href="strains.html">Explore</a>
-          </div>
-        </div>
+        <!-- Card 8-->
         <div class="product-card">
           <div class="image-half">
             <img src="images/kush_bomb.png" alt="Grape Pie Strain" />
@@ -198,7 +202,7 @@
       <div class="container">
         <div class="footer-upper">
           <div class="logo">
-            <img src="./images/logo.svg" alt="BudBuddie Logo" />
+            <a href="index.html"><img src="./images/logo.svg" alt="BudBuddie Logo" /></a>
           </div>
           <div class="footer-nav">
             <h4>Navigation</h4>
@@ -270,5 +274,3 @@
     </script>
   </body>
 </html>
-
-{% for transaction in transactions %} {% if transaction.gateway == "Bank Deposit" %} {% endif %} {% endfor%}
