--- a/learn.html
+++ b/learn.html
@@ -18,15 +18,15 @@
   </head>
   <body>
     <!-- Navbar-->
-    <header class="hero-strains">
+    <header class="hero">
       <div class="container">
         <div class="navbar">
           <a href="index.html"><img src="images/logo.svg" alt="BudBuddie Logo" class="logo" /></a>
           <nav>
             <ul class="nav-menu">
-              <li><a href="index.html" class="nav-link">Home</a></li>
+              <li><a href="index.html" class="nav-link active">Home</a></li>
               <li><a href="about.html" class="nav-link">About Us</a></li>
-              <li><a href="strains.html" class="nav-link active">Strains</a></li>
+              <li><a href="strains.html" class="nav-link">Strains</a></li>
               <li><a href="learn.html" class="nav-link">Learn</a></li>
             </ul>
             <div class="hamburger">
@@ -38,24 +38,33 @@
         </div>
       </div>
       <!-- Hero Text-->
-
-      <div class="hero-content-strains">
-        <div class="container">
-          <h1>Cannabis Strains</h1>
-          <p>
-            From the soothing embrace of Indicas to the energizing vibes of Sativas, our curated collection promises a diverse palette of experiences.
-            Elevate your exploration, one strain at a time, and let each bud unveil a story uniquely crafted for you.
-          </p>
+      <div class="hero-content">
+        <h1>Explore the <br />World of Cannabis</h1>
+        <p>
+          Discover our diverse universe of strains, connect with local dealers and elevate your cannabis exploration experience. BudBuddie is your
+          companion on the journey of discovering.
+        </p>
+        <div class="hero-content-buttons">
+          <a class="btn" href="strains.html">Explore Strains</a>
+          <a class="btn-secondary" href="404.html">Become a Dealer</a>
         </div>
       </div>
     </header>
+    <!-- SubHero Text-->
+    <div class="text-content">
+      <h2>
+        Immerse yourself in a selection of cannabis strains,<br />
+        each one a tale waiting for you to unfold it.
+      </h2>
+    </div>
     <!-- Card Section-->
     <div class="container">
       <div class="card-collection-text">
-        <h2 class="strains-header">Strains Database</h2>
+        <h2 class="header2">Favourite Strains Today.</h2>
+        <p>Discover finest cannabis strains.</p>
       </div>
       <!-- Card 1-->
-      <div class="card-collection-grid">
+      <div class="card-collection">
         <div class="product-card">
           <div class="image-half">
             <img src="images/grape_pie.png" alt="Grape Pie Strain" />
@@ -67,7 +76,7 @@
             <h3>Grape Pie</h3>
             <p>THC 22% CBD 0%</p>
             <p>Uplifting, Euphoric, Relaxed</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
+            <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
         <!-- Card 2-->
@@ -82,7 +91,7 @@
             <h3>Lemon Haze</h3>
             <p>THC 20% CBD 0%</p>
             <p>Energetic, Trippy, Happy</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
+            <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
         <!-- Card 3-->
@@ -92,107 +101,101 @@
           </div>
           <div class="text-half">
             <div class="strain-type">
-              <span class="strain-type-text">Hybrid</span>
+              <span class="strain-type-text">Indica/Sativa</span>
             </div>
             <h3>Kush Bomb</h3>
             <p>THC 25% CBD 0%</p>
             <p>Strong, Cerebral, Uplifting</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
-          </div>
-        </div>
-        <!-- Card 4-->
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/ak_47.png" alt="AK-47 Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Hybrid</span>
-            </div>
-            <h3>AK-47</h3>
-            <p>THC 19% CBD 0%</p>
-            <p>Talkative, Hungry, Energetic</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
-          </div>
-        </div>
-        <!-- Card 5-->
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/sour_diesel.png" alt="Sour Diesel Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Hybrid</span>
-            </div>
-            <h3>Sour Diesel</h3>
-            <p>THC 19% CBD 0%</p>
-            <p>Creative, Energetic, Uplifting</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
-          </div>
-        </div>
-        <!-- Card 6-->
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/super_silver_haze.png" alt="Super Silver Haze Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Sativa</span>
-            </div>
-            <h3>Super Silver Haze</h3>
-            <p>THC 21% CBD 1%</p>
-            <p>Energetic, Uplifting, Creative</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
-          </div>
-        </div>
-        <!-- Card 7-->
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/white_widow.png" alt="White Widow Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Hybrid</span>
-            </div>
-            <h3>White Widow</h3>
-            <p>THC 15% CBD 0%</p>
-            <p>Energetic, Talkative, Creative</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
-          </div>
-        </div>
-        <!-- Card 8-->
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/purple_haze.png" alt="Purple Haze Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Sativa</span>
-            </div>
-            <h3>Purple Haze</h3>
-            <p>THC 16% CBD 0%</p>
-            <p>Energetic, Creative, Talkative</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
-          </div>
-        </div>
-        <!-- Card 8-->
-        <div class="product-card">
-          <div class="image-half">
-            <img src="images/maui_wowie.png" alt="Maui Wowie Strain" />
-          </div>
-          <div class="text-half">
-            <div class="strain-type">
-              <span class="strain-type-text">Sativa</span>
-            </div>
-            <h3>Maui Wowie</h3>
-            <p>THC 19% CBD 0%</p>
-            <p>Happy, Energetic, Uplifted</p>
-            <a class="btn-terciary" href="404.html">Explore</a>
+            <a class="btn-terciary" href="strains.html">Explore</a>
           </div>
         </div>
       </div>
+      <a class="btn-noborder" href="strains.html">View All Products</a>
     </div>
-
+    <!-- Dealer Newsletter-->
+    <div class="dealer-newsletter">
+      <div class="container">
+        <h2>Looking for a weed dealer in your area? <span>We got you!</span></h2>
+        <form class="dealer-form">
+          <input type="email" name="email" placeholder="email@adress.com" required autocomplete="off" />
+          <input type="submit" value="register" class="btn-secondary" />
+          <p>
+            By providing us with your email adress, you agree to BudBuddie’s <a href="404.html">Terms of Service</a> and
+            <a href="404.html">Privacy Policy.</a>
+          </p>
+        </form>
+      </div>
+    </div>
+    <!-- Learn Section-->
+    <div class="learn-section">
+      <div class="container">
+        <div class="learn-section-text">
+          <h2 class="header2">Educate Yourself.</h2>
+          <p>Understanding its properties, potential benefits, and responsible use can contribute to a safe and informed cannabis experience</p>
+        </div>
+        <!-- Article Card 1-->
+        <div class="article-grid">
+          <article class="article-container">
+            <div class="article-img-container">
+              <img src="./images/article_1.jpg" alt="Cannabis Plants" class="article-image" />
+            </div>
+            <div class="article-content">
+              <h3>How to grow weed at home</h3>
+              <a class="btn-secondary" href="learn.html">learn more</a>
+            </div>
+          </article>
+          <!-- Article Card 2-->
+          <article class="article-container-alt">
+            <div class="article-img-container-alt">
+              <img src="./images/article_2.jpg" alt="Cannabis Plants" class="article-image-alt" />
+            </div>
+            <div class="article-content-alt">
+              <div class="strain-type">
+                <span class="strain-type-text">Lifestyle</span>
+              </div>
+              <h3>History of Cannabis use</h3>
+              <p>
+                Cannabis, with a rich history spanning millennia, has been cultivated and used by diverse cultures for medicinal, recreational, and
+                spiritual purposes.
+              </p>
+              <a class="btn-article" href="learn.html">learn more</a>
+            </div>
+          </article>
+          <!-- Article Card 3-->
+          <article class="article-container-alt">
+            <div class="article-img-container-alt">
+              <img src="./images/article_3.jpg" alt="Cannabis Plants" class="article-image-alt" />
+            </div>
+            <div class="article-content-alt">
+              <div class="strain-type">
+                <span class="strain-type-text">Grow</span>
+              </div>
+              <h3>Properly Curing and Storing</h3>
+              <p>
+                Ensuring optimal flavor and potency, properly curing and storing cannabis involves a delicate balance of humidity and temperature.
+              </p>
+              <a class="btn-article" href="learn.html">learn more</a>
+            </div>
+          </article>
+        </div>
+        <a class="btn-noborder" href="learn.html">View All Articles</a>
+      </div>
+    </div>
+    <!-- Newsletter-->
+    <div class="newsletter">
+      <div class="container">
+        <h2 class="header2">Stay in the loop!</h2>
+        <p class="subheader">Get the latest news on strains and exclusive offers. Your cannabis journey is about to get exciting</p>
+        <form class="dealer-form">
+          <input type="email" name="email" placeholder="email@adress.com" required autocomplete="off" />
+          <input type="submit" value="register" class="btn-secondary" />
+          <p>
+            By providing us with your email adress, you agree to BudBuddie’s <a href="404.html">Terms of Service</a> and
+            <a href="404.html">Privacy Policy.</a>
+          </p>
+        </form>
+      </div>
+    </div>
     <!-- Footer-->
     <footer>
       <div class="container">
