--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <title>BudBuddie | Elevate Your Cannabis Experience</title>
   </head>
-  <body class="change-color">
+  <body>
     <!-- Navbar-->
     <header class="hero">
       <div class="container">
@@ -48,7 +48,7 @@
           <a class="btn" href="strains.html">Explore Strains</a>
           <a class="btn-secondary" href="404.html">Become a Dealer</a>
         </div>
-        <a class="btn-secondary get-high" href="#" onclick="addGetHighClass()">I JUST WANT TO GET HIGH!</a>
+        <a class="btn-secondary get-high" href="#" onclick="toggleGetHighClass()">I JUST WANT TO GET HIGH!</a>
       </div>
     </header>
     <!-- SubHero Text-->
@@ -272,8 +272,17 @@
         })
       );
 
-      function addGetHighClass() {
-        document.body.classList.toggle('get-high');
+      function toggleGetHighClass() {
+        const body = document.body;
+        const button = document.querySelector('.get-high');
+
+        body.classList.toggle('change-color');
+
+        if (body.classList.contains('change-color')) {
+          button.innerText = 'I WANT TO BE NORMAL AGAIN!';
+        } else {
+          button.innerText = 'I JUST WANT TO GET HIGH!';
+        }
       }
     </script>
   </body>
